--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="content">
         <h1>Notice</h1>
         <p>
-          이 사이트는 <strong>Leovelop</strong>의 웹 기반 포트폴리오를 소개하는 용도로 제작되었습니다. 이미지들은 <strong>unsplash.com</strong>에서 가져왔으며
+          이 사이트는 Leovelop의 웹 기반 포트폴리오를 소개하는 용도로 제작되었습니다. 이미지들은 unsplash.com에서 가져왔으며
           상업적 이용과는 무관함을 알려드립니다. 방문해주셔서 감사합니다.
         </p>
       </div>
