--- a/location.html
+++ b/location.html
@@ -13,6 +13,7 @@
   <script defer src="./js/main.js"></script>
   <script defer src="./js/sub_visual.js"></script>
   <script defer src="./js/location.js"></script>
+  <script defer src="./js/transport.js"></script>
 </head>
 
 <body>
