section brand 생성

--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@
     </div>
   </section>
 
+  <section id="brand">
+    
+  </section>
+
   <section id="services">
     <div class="inner">
       <h2>What We Can Do</h2>
