--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
   </section>
 
   <section id="brand">
-    
+    <div class="inner">
+      
+    </div>
   </section>
 
   <section id="services">
