--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
 
   <section id="brand">
     <div class="inner">
-      
+      <h2></h2>
+      <h1>BRAND IDENTITY</h1>
     </div>
   </section>
 
