--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@
     <div class="inner">
       <h2>Design and Symbol</h2>
       <h1>BRAND IDENTITY</h1>
+      <div class="wrap">
+        <article></article>
+      </div>
     </div>
   </section>
 
