--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
       <h2>Design and Symbol</h2>
       <h1>BRAND IDENTITY</h1>
       <div class="wrap">
-        <article></article>
+        <article>
+          
+        </article>
       </div>
     </div>
   </section>
