article들에 이미지 넣기

--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
         <article>
           <img src="./img/brand3.jpg" alt="브랜드 이미지 1">
         </article>
+        <article><img src="./img/brand1.jpg" alt="브랜드 이미지1"></article>
+        <article><img src="./img/brand2.jpg" alt="브랜드 이미지2"></article>
+        <article><img src="./img/brand6.jpg" alt="브랜드 이미지6"></article>
+        <article><img src="./img/brand4.jpg" alt="브랜드 이미지4"></article>
       </div>
     </div>
   </section>
