--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <h1>BRAND IDENTITY</h1>
       <div class="wrap">
         <article>
-          
+          <h2>Itaque magnam</h2>
         </article>
         <article>
           <img src="./img/brand1.jpg" alt="브랜드 이미지1">
