--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
       <div class="wrap">
         <article>
           <h2>Itaque magnam</h2>
+          <p>Maiores debitis, cupiditate ipsum molestiae doloribus dolor voluptate</p>
         </article>
         <article>
           <img src="./img/brand1.jpg" alt="브랜드 이미지1">
