컨텐츠 추가

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
         <article>
           <h2>Itaque magnam</h2>
           <p>Maiores debitis, cupiditate ipsum molestiae doloribus dolor voluptate</p>
+          <a href="#" title="view detail">VIEW DETAIL</a>
         </article>
         <article>
           <img src="./img/brand1.jpg" alt="브랜드 이미지1">
