--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <h1>BRAND IDENTITY</h1>
       <div class="wrap">
         <article>
-          <i></i>
+          <i class="fas fa-city"></i>
           <h2>Itaque magnam</h2>
           <p>Maiores debitis, cupiditate ipsum molestiae doloribus dolor voluptate</p>
           <a href="#" title="view detail">View Detail</a>
