hover시 scale 수치 변경

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
         </article>
         <article>
           <img src="./img/brand1.jpg" alt="브랜드 이미지1">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur repellat mollitia culpa vitae velit consequatur.</p>
         </article>
         <article>
           <img src="./img/brand2.jpg" alt="브랜드 이미지2">
