--- a/index.html
+++ b/index.html
@@ -202,16 +202,19 @@
         </article>
         <article>
           <img src="./img/brand1.jpg" alt="브랜드 이미지1">
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur repellat mollitia culpa vitae velit consequatur.</p>
+          <p>Harum facilis quis labore sapiente autem. Minima enim sit, quidem in ratione eaque blanditiis assumenda, nam vitae veniam voluptatum distinctio.</p>
         </article>
         <article>
           <img src="./img/brand2.jpg" alt="브랜드 이미지2">
+          <p>Reiciendis ipsa et eveniet voluptatum soluta odio molestias, consequatur voluptas asperiores accusantium aperiam facilis voluptates.</p>
         </article>
         <article>
           <img src="./img/brand6.jpg" alt="브랜드 이미지6">
+          <p>Quia, similique! Cumque nobis id voluptates nulla eos dolore magni ad delectus omnis. Ratione veniam molestias voluptate quis, consequuntur cum quod iure exercitationem.</p>
         </article>
         <article>
           <img src="./img/brand4.jpg" alt="브랜드 이미지4">
+          <p>Fugiat doloremque necessitatibus voluptatibus, sint, in quos cupiditate expedita temporibus voluptas dicta repudiandae possimus obcaecati!</p>
         </article>
       </div>
     </div>
