--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <title>LEOFORTE MAIN</title>
   <script src="https://kit.fontawesome.com/854aa5d369.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="./img/Leovelop(transparent).ico" type="image/x-icon">
-  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
-  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <link rel="stylesheet" href="./css/style.css" />
   <script defer src="./js/anime.js"></script>
   <script defer src="./js/cookie_pop.js"></script>
@@ -202,19 +202,23 @@
         </article>
         <article>
           <img src="./img/brand1.jpg" alt="브랜드 이미지1">
-          <p>Harum facilis quis labore sapiente autem. Minima enim sit, quidem in ratione eaque blanditiis assumenda, nam vitae veniam voluptatum distinctio.</p>
+          <p>Harum facilis quis labore sapiente autem. Minima enim sit, quidem in ratione eaque blanditiis assumenda,
+            nam vitae veniam voluptatum distinctio.</p>
         </article>
         <article>
           <img src="./img/brand2.jpg" alt="브랜드 이미지2">
-          <p>Reiciendis ipsa et eveniet voluptatum soluta odio molestias, consequatur voluptas asperiores accusantium aperiam facilis voluptates.</p>
+          <p>Reiciendis ipsa et eveniet voluptatum soluta odio molestias, consequatur voluptas asperiores accusantium
+            aperiam facilis voluptates.</p>
         </article>
         <article>
           <img src="./img/brand6.jpg" alt="브랜드 이미지6">
-          <p>Quia, similique! Cumque nobis id voluptates nulla eos dolore magni ad delectus omnis. Ratione veniam molestias voluptate quis, consequuntur cum quod iure exercitationem.</p>
+          <p>Quia, similique! Cumque nobis id voluptates nulla eos dolore magni ad delectus omnis. Ratione veniam
+            molestias voluptate quis, consequuntur cum quod iure exercitationem.</p>
         </article>
         <article>
           <img src="./img/brand4.jpg" alt="브랜드 이미지4">
-          <p>Fugiat doloremque necessitatibus voluptatibus, sint, in quos cupiditate expedita temporibus voluptas dicta repudiandae possimus obcaecati!</p>
+          <p>Fugiat doloremque necessitatibus voluptatibus, sint, in quos cupiditate expedita temporibus voluptas dicta
+            repudiandae possimus obcaecati!</p>
         </article>
       </div>
     </div>
