--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LEOFORTE GALLERY</title>
   <script src="https://kit.fontawesome.com/854aa5d369.js" crossorigin="anonymous"></script>
+  <!--<script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>-->
   <script defer src="./js/isotope.pkgd.min.js"></script>
   <link rel="shortcut icon" href="./img/Leovelop(transparent).ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/style.css" />
