--- a/gallery.html
+++ b/gallery.html
@@ -85,7 +85,7 @@
           <button class="btnSearch">Search</button>
         </article>
         <article id="wrap">
-          <img src="./img/loading.gif" class="loading">
+          <img src="./img/loading.gif" class="loading" alt="로딩 이미지">
           <ul id="list">
           </ul>
         </article>
