--- a/index.html
+++ b/index.html
@@ -55,20 +55,16 @@
 
       <nav class="menuWeb">
         <ul id="gnb">
-          <li>
-            <a href="./department.html">DEPARTMENT</a>
-          </li>
+          <li><a href="./department.html">DEPARTMENT</a></li>
           <li><a href="./youtube.html">YOUTUBE</a></li>
           <li><a href="./community.html">COMMUNITY</a></li>
           <li><a href="./gallery.html">GALLERY</a></li>
           <li><a href="./location.html">LOCATION</a></li>
           <li><a href="./join.html">JOIN</a></li>
 
-          <div class="sns">
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
-          </div>
+          <li class="sns"><a href="#"><i class="fab fa-twitter"></i></a></li>
+          <li class="sns"><a href="#"><i class="fab fa-facebook"></i></a></li>
+          <li class="sns"><a href="#"><i class="fab fa-instagram-square"></i></a></li>
         </ul>
       </nav>
 
