--- a/join.html
+++ b/join.html
@@ -77,7 +77,7 @@
     <div class="inner">
       <form action="/" id="member" method="POST">
         <fieldset>
-          <legend class="hidden">회원가입양식폼</legend>
+          <legend>회원가입양식폼</legend>
           
           <article>
             <ul class="memberStep">
