a태그에 title값 추가

--- a/index.html
+++ b/index.html
@@ -228,37 +228,37 @@
         <article>
           <ul>
             <li class="on">
-              <a href="./img/services1.jpg">
+              <a href="./img/services1.jpg" title="서비스 이미지1">
                 <i class="fas fa-door-open"></i>
                 <p>Perferendis</p>
               </a>
             </li>
             <li>
-              <a href="./img/services2.jpg">
+              <a href="./img/services2.jpg" title="서비스 이미지2">
                 <i class="fas fas fa-clock"></i>
                 <p>Distinctio</p>
               </a>
             </li>
             <li>
-              <a href="./img/services3.jpg">
+              <a href="./img/services3.jpg" title="서비스 이미지3">
                 <i class="fas fa-laptop-code"></i>
                 <p>Alias</p>
               </a>
             </li>
             <li>
-              <a href="./img/services4.jpg">
+              <a href="./img/services4.jpg" title="서비스 이미지4">
                 <i class="fas fa-envelope-open-text"></i>
                 <p>Laboriosam</p>
               </a>
             </li>
             <li>
-              <a href="./img/services5.jpg">
+              <a href="./img/services5.jpg" title="서비스 이미지5">
                 <i class="fas fa-cloud-upload-alt"></i>
                 <p>Voluptatem</p>
               </a>
             </li>
             <li>
-              <a href="./img/services6.jpg">
+              <a href="./img/services6.jpg" title="서비스 이미지6">
                 <i class="fas fa-download"></i>
                 <p>Doloribus</p>
               </a>
@@ -274,7 +274,7 @@
     </div>
     <figure class="servicesImg">
       <h2>.01</h2>
-      <img src="./img/services1.jpg">
+      <img src="./img/services1.jpg" alt="서비스 이미지1">
     </figure>
   </section>
 
