--- a/department.html
+++ b/department.html
@@ -28,11 +28,9 @@
           <li><a href="./location.html">LOCATION</a></li>
           <li><a href="./join.html">JOIN</a></li>
 
-          <div class="sns">
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
-          </div>
+          <li class="sns"><a href="#"><i class="fab fa-twitter"></i></a></li>
+          <li class="sns"><a href="#"><i class="fab fa-facebook"></i></a></li>
+          <li class="sns"><a href="#"><i class="fab fa-instagram-square"></i></a></li>
         </ul>
       </nav>
 
