--- a/department.html
+++ b/department.html
@@ -127,7 +127,7 @@
         <h2>Lorem, ipsum dolor.</h2>
         <h1>BUSINESS</h1>
         <div class="pic">
-          <img src="./img/team.jpg">
+          <img src="./img/team.jpg" alt="팀 이미지">
         </div>
         <ul>
           <li>
